client/styles/media-queries.css
@media only screen and (max-device-width: 480px) {
    body {
        overflow: visible;
        line-height: 1em;
        font-size: 1.7vh;
        background-color: rgb(246,246,246);
    }

    #pc-container {
        margin-bottom: 7vh;
    }

    .enter-block {
        display: none;
    }

    .logo a {
        margin: 0;
    }

    .logo {
        width: 30%;
        text-align: center;
        padding-bottom: 0;
        padding-right: 2%;
        padding-left: 2%;
        float: none;
        display: inline-block;
        height: auto;
        vertical-align: middle;
        font-size: 4.2vh;
    }

    .sign-bg {
        display: none;
    }

    .enter {
        display: inline-block;
        background: url(/img/enter-icon.png) no-repeat;
        background-size: 100%;
        width: 4vh;
        height: 4vh;
        vertical-align: middle;
        margin-left: 1em;
    }

    .main-header {
        position: relative;
        width: 100%
    }

    #content-wrapper {
        width: auto;
    }

    .middle-section {
        width: auto;
    }

    .lang-select {
        width: 50%;
        text-align: center;
        display: inline-block;
        padding: 1em 0 1em 0;
        float: none;
        font-size: 1.3em;
    }

    .switch-lang {
        height: 1.3em;
        font-size: 1.1em;
    }

    .allocation p {
        font-size: 1em;
        padding: 1em;
    }

    .lang-select span {
        margin-left: 0;
    }

    .logo-p {
        display: none;
    }

    .center-block {
        width: 100vw;
    }

    .showsettings {
        position: fixed;
        display: block;
        bottom: 0;
        line-height: 2em;
        font-size: 1.6em;
        background: #4E6BA5;
        width: 100%;
        color: white;
        height: 5%;
        text-align: center;
        font-family: 'Helvetica-Neu', sans-serif;
    }

    .center-content {
        overflow: scroll;
        width: auto;
        height: 76vh;
    }

    .dictionaries-section,
    .functions-language {
        display: none;
    }

    .menu {
        margin-top: 0;
        position: relative;
        width: auto;
        height: auto;
        font-size: 1.1em;
    }

    .menu li {
        padding-top: 2vh;
        padding-bottom: 2vh;
    }

    .menu li a {
        padding-left: 1em;
        padding-right: 1em;
        padding-top: 0.1em;
        padding-bottom: 0.1em;
    }

    .middle-section {
        margin-top: 0;
    }

    .top-line {
        position: relative;
        top: 0;
        width: auto;
    }

    .center-content {
        float: none;
        margin-top: 0;
        padding-top: 1vh;
        padding-left: 4vw;
        padding-right: 4vw;
    }

    .close-cross {
        float: none;
    }

    .allocation {
        margin: 0;
        float: none;
    }
}

